--- a/irc.conf
+++ b/irc.conf
@@ -174,13 +174,13 @@ redhat.autoreconnect
 redhat.autoreconnect_delay
 redhat.nicks = "xiangce,xiangce_,xiangce_up"
 redhat.nicks_alternate
-redhat.username = "Xiangce Liu"
-redhat.realname = "Xiangce Liu"
+redhat.username = "xialiu"
+redhat.realname = "XiangceLiu"
 redhat.local_hostname
 redhat.usermode
 redhat.command
 redhat.command_delay
-redhat.autojoin = "#gss_china,#customer_platform,#insights"
+redhat.autojoin = "#insights,#gss_china,#customer-platform,#eng-china,#sap"
 redhat.autorejoin
 redhat.autorejoin_delay
 redhat.connection_timeout
