--- a/.tmux.conf
+++ b/.tmux.conf
@@ -116,8 +116,10 @@ run '~/.tmux/plugins/tpm/tpm'
 #bind -n S-down new-window
 bind -n C-left prev
 bind -n C-right next
-bind -n S-left swap-window -t -1
-bind -n S-right swap-window -t +1
+bind -n C-K kill-window
+bind -n C-k clear-history
+#bind -n S-left swap-window -t -1
+#bind -n S-right swap-window -t +1
 # reload ~/.tmux.conf using PREFIX r
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 # use vim keybindings in copy mode
