--- a/weechat.conf
+++ b/weechat.conf
@@ -34,7 +34,7 @@ buffer_search_case_sensitive = off
 buffer_search_force_default = off
 buffer_search_regex = off
 buffer_search_where = prefix_message
-buffer_time_format = "%H:%M:%S"
+buffer_time_format = "${color:252}%H:${color:245}%M:${color:245}%S"
 color_basic_force_bold = off
 color_inactive_buffer = on
 color_inactive_message = on
@@ -76,7 +76,7 @@ input_share = none
 input_share_overwrite = off
 input_undo_max = 32
 item_away_message = on
-item_buffer_filter = "⚑"
+item_buffer_filter = "♣"
 item_buffer_zoom = "!"
 item_mouse_status = "M"
 item_time_format = "%H:%M:%S"
@@ -96,7 +96,7 @@ paste_auto_add_newline = on
 paste_bracketed = on
 paste_bracketed_timer_delay = 10
 paste_max_lines = 1
-prefix_action = "⚡"
+prefix_action = "⎈"
 prefix_align = right
 prefix_align_max = 0
 prefix_align_min = 0
@@ -106,10 +106,10 @@ prefix_buffer_align = right
 prefix_buffer_align_max = 0
 prefix_buffer_align_more = "+"
 prefix_buffer_align_more_after = on
-prefix_error = "⚠"
-prefix_join = "→"
+prefix_error = "☠"
+prefix_join = "↣"
 prefix_network = "ℹ"
-prefix_quit = "←"
+prefix_quit = "↜"
 prefix_same_nick = "↳"
 prefix_suffix = "|"
 quote_nick_prefix = "<"
@@ -334,6 +334,7 @@ title.type = window
 
 [filter]
 joinquit = off;*;irc_join,irc_part,irc_quit;*
+statuspage = on;*;nick_*Statuspage*;*
 
 [key]
 ctrl-? = "/input delete_previous_char"
