period update Signed-off-by: Xiangce Liu <xiangceliu@redhat.com>

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -95,7 +95,7 @@ set -g @plugin 'Morantron/tmux-fingers'
 
 # configuration
 set -g @continuum-restore 'on'
-set -g @continuum-boot 'on'
+set -g @continuum-boot 'off'
 set -g @continuum-boot-options 'iterm'
 # set -g @urlview-key 'x'
 # set -g @sidebar-tree 'e'
