--- a/.tmux.conf
+++ b/.tmux.conf
@@ -37,6 +37,7 @@ setw -g automatic-rename on
 
 set -g status-justify "left"
 set -g status-left-length "100"
+set -g status-bg colour234
 set -g status-right-length "100"
 set -g status-left "#[fg=colour190,bg=colour238]#[fg=colour238,bg=colour234]"
 set -g status-right "#{prefix_highlight}#[fg=colour190,bg=colour234]#[fg=colour234,bg=colour190]%Y-%m-%d#[fg=colour203,bg=colour190]#[fg=colour234,bg=colour202]%H:%M#[fg=colour1,bg=colour202]"
